erDiagram
    USERS ||--o{ MONTHLY_CYCLES : "manages (admin)"
    PATIENTS ||--o{ PATIENT_RECORDS : "visits (many per patient)"
    MONTHLY_CYCLES ||--o{ PATIENT_RECORDS : "contains"
    PATIENT_RECORDS ||--o{ CASE_PAYMENTS : "installments (CASE only)"
    PATIENT_RECORDS }o--|| LABS : "assigned to (CASE only)"
    MONTHLY_CYCLES ||--|| MONTHLY_FINANCIALS : "summarized by"

    USERS {
        uuid id PK
        string email "unique, used for auth"
        string username "display name, unique"
        string password_hash "managed by Supabase Auth"
        enum role "ADMIN or ASSISTANT"
        timestamp created_at "account creation date"
    }

    PATIENTS {
        uuid id PK
        string patient_id "globally unique forever, e.g. 0001/26"
        string patient_name "not null"
        integer age "not null, 0-120"
        enum gender "MALE, FEMALE, OTHER — not null"
        string address "optional"
        string drug_allergy "optional free text"
        string[] current_medications "optional list, assistant adds chips"
        string[] past_medical_history "snapshot of selected option names"
        string past_dental_history "optional free text"
        timestamp created_at
    }

    MEDICAL_HISTORY_OPTIONS {
        uuid id PK
        string name "unique picklist entry — dynamic, admin-managed later"
    }

    MONTHLY_CYCLES {
        uuid id PK
        string month_year "unique passive month bucket e.g. 2026-09 — no lock/close status"
    }

    LABS {
        uuid id PK
        string lab_name
    }

    CASE_TYPES {
        uuid id PK
        string name
    }

    PATIENT_RECORDS {
        uuid id PK
        uuid cycle_id FK
        string patient_id "FK to PATIENTS.patient_id — one person = one ID"
        date entry_date
        string patient_name "denormalized display copy"
        string address "denormalized display copy, optional"
        enum category "GP or CASE"
        string diagnosis
        integer total_cost
        string month_label "e.g. Sep 2026, used for filtering"
        string lab_name "CASE only, denormalized text"
        date lab_send_date "CASE only"
        date delivery_date "CASE only"
        integer paid "CASE only, sum of payments"
        integer remaining "CASE only, total_cost - paid"
        uuid lab_id FK "FK to LABS, CASE only, ON DELETE SET NULL"
        integer lab_fee "admin-assigned, CASE only"
        enum lab_payment_status "PAID or UNPAID, CASE only, admin-only"
        string case_type "CASE only, text (not FK), e.g. RPD, Crown, Bridge"
        string teeth "CASE only, comma-separated tooth numbers"
        boolean is_carried_forward "CASE only, false for GP"
    }

    CASE_PAYMENTS {
        uuid id PK
        uuid record_id FK
        date payment_date
        integer paid_amount
        string payment_note
        enum payment_status "PAID or UNPAID, CASE only, drives carry-forward"
    }

    MONTHLY_FINANCIALS {
        uuid id PK
        uuid cycle_id FK
        integer total_gp
        integer total_case
        integer gross_income
        integer lab_fee
        integer relieving_fee
        integer general_expenses
        integer assistant_fee
        integer bonus
        integer utility_costs
        integer building_rent
        integer net_profit
        json custom_overheads "array of {id, name, amount}"
    }

    %% UI Display Note:
    %% Record table is split into two tabbed views:
    %%   Tab 1: GP Records (entry_date, patient_name, diagnosis, total_cost)
    %%   Tab 2: Case Records (entry_date, patient_name, diagnosis, lab, total_cost, balance, status, carried-forward)
    %% GP has no installments, no balance, no status column.
    %% Case tracks installments via CASE_PAYMENTS, shows balance and status.
    %% Lab Reconciliation groups case records by lab with a filter selector.
    %%
    %% Cycle Notes:
    %%   MONTHLY_CYCLES rows are passive month buckets (month_year UNIQUE).
    %%   No OPEN/LOCKED status — cycles never lock or close. The app
    %%   auto-creates a bucket on the first record of a month; carry-forward
    %%   creates the next month's bucket when moving unsettled CASE balances.
    %%
    %% Patient Registry Notes:
    %%   PATIENTS — one row per person; patient_id globally unique forever.
    %%   Duplicate registration is impossible: UNIQUE(patient_id) + atomic RPC
    %%   register_patient_with_record (patient + visit record in one transaction).
    %%   A returning patient gets a NEW PATIENT_RECORDS row (visit) linked to
    %%   the same PATIENTS row — demographics live only on PATIENTS.
    %%   past_medical_history / current_medications are TEXT[] snapshots on
    %%   PATIENTS — NOT a foreign key — so editing MEDICAL_HISTORY_OPTIONS
    %%   later never corrupts existing patient history.
    %%   Deleting a record (admin + assistant) never deletes the PATIENTS row.
    %%   PATIENTS delete is admin-only.
    %%
    %% Reference Tables:
    %%   LABS — managed via /admin/reconciliation/manage (add/edit/delete)
    %%   CASE_TYPES — managed via /admin/reconciliation/manage (add/edit/delete)
    %%   MEDICAL_HISTORY_OPTIONS — admin manage UI later (add/edit/delete)
    %%   Both LABS and CASE_TYPES are used in dropdowns for new records.
    %%   Deleting does NOT cascade to patient_records (case_type stored as
    %%   text, lab_name stored as text).
